src/test/ui/consts/drop_box.rs
const fn f<T>(_: Box<T>) {}
//~^ ERROR destructors cannot be evaluated at compile-time

fn main() {}
